--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Color Scheme Generator</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div>
+        <h1>Color Scheme Generator</h1>
+        <form id="color-form">
+          <input id="seed-color" name="seed-color" type="color"/>
+          <select id="scheme-mode" name="scheme-mode">
+            <option value="monochrome">monochrome</option>
+            <option value="monochrome-dark">monochrome-dark</option>
+            <option value="monochrome-light">monochrome-light</option>
+            <option value="analogic">analogic</option>
+            <option value="complement">complement</option>
+            <option value="analogic-complement">analogic-complement</option>
+            <option value="triad">triad</option>
+            <option value="quad">quad</option>
+          </select>
+          <button type="submit">Get Color Scheme</button>
+        </form>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
