render colors from GET request [Issue #4]

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <button type="submit">Get Color Scheme</button>
         </form>
       </div>
+      <section id="color-display">
+      </section>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
